# MuggleTranslator

./: .gitignore  Cargo.toml  REFACTOR_TRANSLATION_PLAN.md  build.ps1  docx-filter-rules.toml  muggle-translator.toml  test.docx
doctranslator/: __init__.py  api.py  chunking.py  context.py  docx_package.py  embeddings.py  errors.py  extract.py  freezer.py  hierarchy.py  ir.py  legal_refs.py  models.py  pipeline.py  pipeline_core.py  progress.py  project.py  protocol.py  quality.py  review.py  sentinels.py  settings.py  textutil.py  translate_agent.py
llama-cpp-rs-0.1.132/llama-cpp-sys-2/: build.rs
prompts/: fuse_ab.txt  json_repair.txt  para_notes.json.txt  patch.txt  stitch_audit.json.txt  translate_a.txt  translate_b.txt  translate_repair.txt
scripts/: docx_compare_python_docx.py  docx_compare_python_docx_rust.py  docx_compare_two_python_docx.py  docx_translation_report.py  docx_verify_structure.py  prompt_lab_gemma3.py
src/: agent.rs  agentflow.rs  config.rs  ffi.rs  freezer.rs  ir.rs  lib.rs  main.rs  progress.rs  quality.rs  sentinels.rs  terminology.rs  textutil.rs
src/docx/: apply.rs  decompose.rs  extract.rs  filter.rs  mod.rs  package.rs  project.rs  pure_text.rs  structure.rs  xml.rs
src/models/: native.rs
src/pipeline/: config.rs  docmap.rs  memory.rs  mod.rs  prompts.rs  trace.rs  translator.rs
test/: [Content_Types].xml
test/customXml/: itemProps1.xml
test/docProps/: app.xml  core.xml  custom.xml
test/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footer2.xml  footer3.xml  footer4.xml  footer5.xml  footer6.xml  footer7.xml  (+10 more)
(+9 files in other folders)
