[package]
name = "muggle-translator"
version = "0.1.0"
edition = "2021"

[lib]
name = "muggle_translator"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
hex = "0.4"
llama-cpp-2 = { version = "0.1.132", path = "llama-cpp-rs-0.1.132/llama-cpp-2", features = ["cuda"] }
once_cell = "1.19"
quick-xml = "0.37"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
base64 = "0.22"
